# rp2040_serial_sv

./: CMakeLists.txt  README.md
src/: app_config.h  main.c
sysview/: CMakeLists.txt  SEGGER.h  SEGGER_Global.h  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_NoOS_CM0.c  SEGGER_SYSVIEW_Int.h
sysview/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
